<resources>
    <string name="app_name">Lets Go</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ADD">ADD</string>
    <string name="Add_trip">Add your trip</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Start">Start</string>
    <string name="View">View</string>
    <string name="TripHistory">TripHistory</string>
    <string name="HistoryOnMaps">HistoryOnMaps</string>
    <string name="SignOut">SignOut</string>
    <string name="Home">Home</string>

    // lella
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="First_Name">First_Name</string>
    <string name="Last_Name">Last_Name</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm_Password</string>
    <string name="Email">Email</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Register">Register</string>
    /////////////////facebook////////////////////////////////
    <string name="facebook_app_id">571107273248872</string>
    <string name="fb_login_protocol_scheme">fb571107273248872</string>
    //////////////////////////Notes//////////////////
    <string name="YourFirstNote">YourFirstNote</string>
    /////////////////////////////hesham/////////////////////////
    <string name="api_key">AIzaSyDWJ2mOtUNJejvgIwEDhMCzlNeHY6nbo4E</string>
    <string name="From">From</string>
    <string name="Name">Name</string>

    <string name="To">To</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Edit">Edit</string>
    <string name="ShowOnMap">ShowOnMap</string>
    <string name="oneWay">One Way</string>
    <string name="round">Round</string>
    <string name="returnDate">Return Date</string>
    <string name="returnTime">Return Time</string>
    <string name="pickDate">Pick Date</string>
    <string name="pickHour">Pick Time</string>

    <string name="ask_permission_title">GPS Permission</string>
    <string name="ask_permission_messege">please enable your GPS to get your Location on Map</string>
    <string name="ask_permission_positive">Enable</string>
    <string name="ask_permission_negative">Cancel</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="add_notes">+Add Note</string>
    <string name="notes">Notes</string>
    <string name="endPoint">End Point</string>
    <string name="startPoint">Start Point</string>

    <integer name="google_play_services_version">11910000</integer>
</resources>
