<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="?android:attr/listChoiceIndicatorMultiple"
            android:title="@string/Home" />
        <item
            android:id="@+id/tripHestory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/TripHistory" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/SignOut"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/SignOut" />
        </menu>
    </item>

</menu>
