<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202030"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="mobile.and.web.iti.navigationdrawer.update.view.trips.update_trip">



    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_weight="2"
        android:src="@drawable/update"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/updateImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_width="2dp"
        app:civ_border_color="#1bd6e7"/>

    <!--<ImageView-->
        <!--android:id="@+id/updateImage"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:layout_marginLeft="200dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_gravity="center"-->
        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/updateTripName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/From" />

        <EditText
            android:id="@+id/updateFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:inputType="textPersonName" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/To" />

        <EditText
            android:id="@+id/updateTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/Date" />

        <TextView
            android:id="@+id/updateDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="pickDateU"
            android:background="@drawable/btn_bg"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/Edit" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="50dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:text="@string/Time" />

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="pickTimeU"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:background="@drawable/btn_bg"
            android:text="@string/Edit" />

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:text="@string/Update" />


     </LinearLayout>
    </ScrollView>


</LinearLayout>
