<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202030"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="mobile.and.web.iti.navigationdrawer.update.view.trips.ViewTrip">


    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_weight="2"
        android:src="@drawable/view"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ViewImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingTop="8dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round"
        app:civ_border_width="2dp"
        app:civ_border_color="#1bd6e7"/>







    <!--<ImageView-->
        <!--android:id="@+id/ViewImage"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:layout_marginLeft="200dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_gravity="center"-->
        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"

            android:textSize="20dp"
            android:text="@string/Name" />

        <TextView
            android:id="@+id/edtTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"

            android:textSize="20dp"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="italic"
            android:layout_weight=".5"
            android:text="@string/From" />

        <TextView
            android:id="@+id/From"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"

            android:textSize="20dp"
            android:layout_weight="1.5" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:textSize="20dp"
            android:text="@string/To" />

        <TextView
            android:id="@+id/To"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:textSize="20dp"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="italic"

            android:layout_weight=".5"

            android:text="@string/Date" />

        <TextView
            android:id="@+id/edtTripTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="italic"

            android:layout_weight="1.5" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"

            android:textSize="20dp"
            android:layout_weight=".5"

            android:text="@string/Time" />

        <TextView
            android:id="@+id/edtTripDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"

            android:textSize="20dp"
            android:layout_weight="1.5"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="italic"
            android:textSize="20dp"
            android:text="Notes" />


    </LinearLayout>

    <ListView
        android:id="@+id/myList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     />
    </LinearLayout>
    </ScrollView>


</LinearLayout>
